[package]
name = "rfb"
version = "0.1.0"
description = "Implementation of the RFB protocol (RFC 6143), including a server implementation."
repository = "https://github.com/oxidecomputer/rfb"
readme = "README.md"
authors = ["Jordan Paige Hendricks <jordan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rfb"
path = "src/lib.rs"

[[example]]
name = "example-server"
path = "examples/server.rs"

[dependencies]
ascii = { version = "1.0", default-features = false }
async-trait = "0.1.53"
bitflags = "1.3.2"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
image = "0.24.1"
