[package]
name = "rfb"
version = "0.1.0"
description = "Implementation of the RFB protocol (RFC 6143), including a server implementation."
repository = "https://github.com/oxidecomputer/rfb"
readme = "README.md"
authors = ["Jordan Paige Hendricks <jordan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rfb"
path = "src/lib.rs"

[[example]]
name = "example-server"
path = "examples/server.rs"

[dependencies]
ascii = { version = "1.1", default-features = false }
async-trait = "0.1.80"
bitflags = "2.4"
env_logger = "0.11"
futures = "0.3.30"
log = "0.4.17"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25.1"
